test/libyul/yulSyntaxTests/invalid/literals_on_stack_disallowed_with_debug_info.yul
/// @use-src 0:"input.sol"
object "C" {
    code {
        1
    }
}
// ----
// ParserError 6913: Call or assignment expected.
// ParserError 2314: (67-68): Expected end of source but got '}'
